syntax = 'proto3';

option go_package = "src/proto";

package NWNX4.RPC.Proto.SCORCO;

service SCORCOService {
  rpc SCORCOGetGFFSize(SCORCOGetGFFSizeRequest) returns (SCORCOGetGFFSizeResponse);
  rpc SCORCOGetGFF(SCORCOGetGFFRequest) returns (SCORCOGetGFFResponse);
  rpc SCORCOSetGFF(SCORCOSetGFFRequest) returns (SCORCOSetGFFResponse);
}

message SCORCOGetGFFSizeRequest {
  string sVarName = 1;
}

message SCORCOGetGFFSizeResponse {
  uint32 size = 1;
}

message SCORCOGetGFFRequest {
  string sVarName = 1;
}

message SCORCOGetGFFResponse {
  bytes gffData = 1;
}

message SCORCOSetGFFRequest {
  string sVarName = 1;
  bytes gffData = 2;
}

message SCORCOSetGFFResponse {}
